--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,9 @@ html, body, #root {
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto';
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
