--- a/src/Arrival/Arrival.css
+++ b/src/Arrival/Arrival.css
@@ -3,6 +3,11 @@
   display: flex;
   align-items: center;
   padding: 15px 0;
+  border-bottom: 1px solid #EEE;
+}
+
+.Arrival:hover {
+  background-color: #EEE
 }
 
 .Arrival h3 {
