--- a/src/Stop/Stop.css
+++ b/src/Stop/Stop.css
@@ -3,20 +3,30 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  box-shadow: 0 1px 3px #666;
+  position: relative;
+  z-index: 1;
 }
 
 .Stop .stopInfo {
-  padding: 20px 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid #DDD;
 }
 
 .Stop .stopInfo h2 {
+  padding: 30px 0;
   font-weight: 300;
   text-transform: uppercase;
   font-size: 18px;
+}
+
+.Stop .stopInfo img {
+  width: 100%;
+  border: 1px solid #CCC;
 }
 
 .Stop .arrivals {
