--- a/src/Trip/TripStop.css
+++ b/src/Trip/TripStop.css
@@ -14,6 +14,10 @@
   margin: 20px;
   border-radius: 50%;
   border: 1px solid #666;
+  background-color: white;
+  box-sizing: border-box;
+  position: relative;
+  z-index: 0;
 }
 
 .TripStop h3 {
