Add mdi icons and wrapper class

--- a/src/Trip/Trip.css
+++ b/src/Trip/Trip.css
@@ -29,3 +29,10 @@
   top: 30px;
   bottom: 30px;
 }
+
+.Trip .stopped {
+  color: #007DC5;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+}
