Draw icon on current stop in trip stop list

--- a/src/Stop/Arrivals.css
+++ b/src/Stop/Arrivals.css
@@ -1,4 +1,10 @@
 .Arrivals {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Arrivals .arrivalList {
   flex: 1;
   overflow: scroll;
 }
