Show late/early/ontime for arrivals and trips

--- a/src/Stop/Arrivals.css
+++ b/src/Stop/Arrivals.css
@@ -23,7 +23,7 @@
 }
 
 .Arrivals .loadAnimation {
-  background-color: red;
+  background-color: #AAA;
   animation: cssload-width 10s cubic-bezier(0.45, 0, 1, 1);
 }
 
