--- a/src/Arrival/Arrival.css
+++ b/src/Arrival/Arrival.css
@@ -37,6 +37,12 @@
 
 .Arrival h4 {
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 400;
   color: #333;
+}
+
+.Arrival h5 {
+  font-weight: 400;
+  font-size: 10px;
+  margin-top: 3px;
 }
