--- a/src/Favorites/Favorite.css
+++ b/src/Favorites/Favorite.css
@@ -39,3 +39,20 @@
   flex: 1;
   overflow: scroll;
 }
+
+.Favorite .close {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #EF382B;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.Favorite .close:hover {
+  background-color: #EF382B;
+  color: white;
+  font-size: 24px;
+}
