--- a/src/Favorites/Favorites.css
+++ b/src/Favorites/Favorites.css
@@ -5,6 +5,35 @@
   flex-wrap: wrap;
   align-items:flex-start;
   align-content:flex-start;
-  padding: 5px;
   overflow: scroll;
+}
+
+.Favorites .loader {
+  width: 100%;
+  height: 1px;
+  background-color: #EEE;
+  position: relative;
+}
+
+.Favorites .loader .loadBar {
+  height: 100%;
+  position: relative;
+  z-index: 120;
+}
+
+.Favorites .loadAnimation {
+  background-color: white;
+  animation: cssload-width 10s cubic-bezier(0.45, 0, 1, 1);
+}
+
+@keyframes cssload-width {
+	0%, 100% {
+		transition-timing-function: cubic-bezier(1, 0, 0.65, 0.85);
+	}
+	0% {
+		width: 0;
+	}
+	100% {
+		width: 100%;
+	}
 }
