--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -2,15 +2,48 @@
 
 }
 
+.Search h1 {
+  font-weight: 300;
+  font-size: 20px;
+  text-align: center;
+  padding: 20px 0;
+}
+
 .Search .geosuggest input {
   border: 1px solid #EEE;
   box-sizing: border-box;
   width: 100%;
-  padding: 20px 10px;
+  padding: 12px 18px;
   background-color: #EEE;
+  font-size: 16px;
+  font-weight: 300;
+  border-top: 1px solid #DDD;
 }
 
 .Search .geosuggest input:focus {
   outline: none;
   background-color: white;
+}
+
+.Search .geosuggest ul {
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid #DDD;
+}
+
+.Search .geosuggest li {
+  display: flex;
+  font-size: 12px;
+  font-weight: 300;
+  height: 40px;
+  align-items: center;
+  padding: 0 20px;
+  border-bottom: 1px solid #EEE;
+  overflow: hidden;
+  color: #888;
+}
+
+.Search .geosuggest li:hover, .Search .geosuggest .geosuggest__item--active {
+  color: white;
+  background-color: #EF382B;
 }
