--- a/src/Map/Map.css
+++ b/src/Map/Map.css
@@ -1,4 +1,24 @@
 .Map {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.Map .backButton {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  z-index: 2;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
+
+@media (max-width: 700px) {
+  .Map .backButton {
+    display: flex;
+  }
 }
