--- a/src/Map/Map.css
+++ b/src/Map/Map.css
@@ -3,6 +3,7 @@
   position: relative;
   background-color: #EEE;
   flex: 1;
+  display: flex;
 }
 
 .Map .backButton {
@@ -19,7 +20,7 @@
 }
 
 .Map div:last-child {
-  width: 100%;
+  flex: 1;
 }
 
 @media (max-width: 700px) {
