--- a/src/Map/Map.css
+++ b/src/Map/Map.css
@@ -4,6 +4,13 @@
   background-color: #EEE;
   flex: 1;
   display: flex;
+  flex-direction: column;
+  height: auto;
+  z-index: 1;
+}
+
+.Map.hidden {
+  display: none;
 }
 
 .Map .backButton {
