--- a/src/Stop/Stop.css
+++ b/src/Stop/Stop.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   box-shadow: 0 1px 3px #666;
   position: relative;
-  z-index: 1;
+  z-index: 2;
   background-color: #EEE;
+  height: auto;
 }
