--- a/src/Stop/NoStop.css
+++ b/src/Stop/NoStop.css
@@ -1,6 +1,7 @@
 .NoStop {
   display: flex;
   flex-direction: column;
-  flex: 1;
   overflow: scroll;
+  width: 350px;
+  box-shadow: 0 1px 3px #666;
 }
