--- a/src/Arrival/Arrival.css
+++ b/src/Arrival/Arrival.css
@@ -33,7 +33,8 @@
 .Arrival h3 {
   font-weight: 300;
   width: 22%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .Arrival h4 {
@@ -46,4 +47,35 @@
   font-weight: 400;
   font-size: 10px;
   margin-top: 3px;
+}
+
+.Arrival .link, .Arrival .brt {
+  font-size: 10px;
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.Arrival .brt p {
+  margin-left: 1px;
+}
+
+.Arrival .ferry {
+  color: #AAA;
+  font-size: 24px;
+}
+
+.Arrival .link {
+  background-color: #007DC5;
+}
+
+.Arrival .brt {
+  background-color: #EF382B;
+  font-size: 16px;
+  font-weight: 600;
+  border-left: 2px;
 }
