--- a/src/Stop/Arrivals.css
+++ b/src/Stop/Arrivals.css
@@ -44,6 +44,17 @@
   border-bottom: 1px solid #DDD;
 }
 
+.Arrivals .noArrivals {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+  color: #AAA;
+  min-height: 60px;
+}
+
 .Arrivals .loader {
   width: 100%;
   height: 1px;
