--- a/src/Favorites/Favorite.css
+++ b/src/Favorites/Favorite.css
@@ -2,15 +2,23 @@
   background-color: white;
   margin: 10px;
   width: 300px;
-  max-height: 100%;
+  max-height: 90%;
   display: flex;
   flex-direction: column;
   border: 1px solid #DDD;
 }
 
+.Favorite .Arrival {
+  cursor: default;
+}
+
 .Favorite header {
   border-bottom: 1px solid #EEE;
+  cursor: pointer;
+}
 
+.Favorite header:hover {
+  color: #999;
 }
 
 .Favorite header h2 {
