--- a/src/Favorites/Favorites.css
+++ b/src/Favorites/Favorites.css
@@ -8,6 +8,20 @@
   overflow: scroll;
 }
 
+.Favorites .noFavorites {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #AAA;
+}
+
+.Favorites .noFavorites h2 {
+  margin-bottom: 10px;
+}
+
 .Favorites .loader {
   width: 100%;
   height: 1px;
