--- a/src/Favorites/Favorites.css
+++ b/src/Favorites/Favorites.css
@@ -8,6 +8,15 @@
   overflow: scroll;
 }
 
+.Favorites .favoriteCards {
+  margin: 10px auto;
+  columns: 300px;
+  column-fill: balance;
+  width: 90%;
+  max-width: 1100px;
+  column-gap: 20px;
+}
+
 .Favorites .noFavorites {
   width: 100%;
   height: 100%;
@@ -38,6 +47,20 @@
 .Favorites .loadAnimation {
   background-color: white;
   animation: cssload-width 10s cubic-bezier(0.45, 0, 1, 1);
+}
+
+@media (max-width: 700px) {
+  .Favorites .favoriteCards {
+    columns: inherit;
+    margin: 0;
+    width: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .Favorites .favoriteCards {
+    /*column-width: 50%;*/
+  }
 }
 
 @keyframes cssload-width {
